src/test/resources/org/echocat/locela/api/java/format/expectedFormatResults.numbers_de_DE.properties
# suppress inspection "NonAsciiCharacters" for whole file
# suppress inspection "UnusedProperty" for whole file

# 0: Required digits, will be filled with 0 if absend
{0,number,0} = 1235
{0,number,00} = 1235
{0,number,000} = 1235
{0,number,0000} = 1235
{0,number,00000} = 01235

# #: Optional digits
{0,number,#0000} = 1235
{0,number,##000} = 1235

# -: Minus sign
{0,number,-0} = -1235

# ,: Grouping separator
{0,number,#,##0} = 1.235
{0,number,##0,0000} = 0.1235

# E: Separates mantissa and exponent in scientific notation. Need not be quoted in prefix or suffix.
{0,number,0E0} = 1E3
{0,number,0E00} = 1E03
{0,number,0E000} = 1E003
{0,number,0E0000} = 1E0003
{0,number,0.00E0} = 1,23E3

# ;: Separates positive and negative subpatterns (Subpattern boundary)
{0,number,#,##0.00;(#,##0.00)} = 1.234,57
{1,number,#,##0.00;(#,##0.00)} = (6,54)

# %: Multiply by 100 and show as percentage (Prefix or suffix)
{0,number,%0.00} = %123456,79
{0,number,0.00%} = 123456,79%

# ‰ (\u2030): Multiply by 1000 and show as per mille value (Prefix or suffix)
{0,number,‰0.00} = ‰1234567,89
{0,number,0.00‰} = 1234567,89‰

# ¤ (\u00A4): Currency sign, replaced by currency symbol. If doubled, replaced by international currency symbol.
# If present in a pattern, the monetary decimal separator is used instead of the decimal separator.  (Prefix or suffix)
{0,number,¤0.00} = €1234,57
{0,number,0.00¤} = 1234,57€

# ': Used to quote special characters in a prefix or suffix, for example, "'#'#" formats 123 to "#123".
# To create a single quote itself, use two in a row: "# o''clock".  (Prefix or suffix)
{0,number,0''''} = 1235'
{0,number,0''#0E%‰¤''} = 1235#0E%‰¤

# Mixed up with other characters
{0,number,0\ abcdefghijklmnopqrstuvwxyz} = 1235 abcdefghijklmnopqrstuvwxyz
